fixed alignment issue of projects box

--- a/styles.css
+++ b/styles.css
@@ -49,11 +49,15 @@ body {
     text-align: center;
     font-size: 20px;
     border-radius: 10px;
-    }
+}
 
 .container {
     display: flex;
 }	
+
+.projects-box-projects {
+    display: flex;
+}
 
 .top-card {
     background-color: rgb(0, 5, 5);
@@ -77,7 +81,6 @@ body {
 
 .projects-box {
     background-color: rgb(200, 209, 209);
-    text-align: center;
     padding: 10px;
     margin: 5px;
     border: 10px;
@@ -93,27 +96,29 @@ body {
     border-radius: 10px;
 }
 
+
+
 /* link colors */
 a:link {
     color: rgb(242, 171, 38); 
     background-color: transparent; 
     text-decoration: none;
-  }
-  
-  a:visited {
+}
+
+a:visited {
     color: rgb(185, 117, 9);
     background-color: transparent;
     text-decoration: none;
-  }
-  
-  a:hover {
+}
+
+a:hover {
     color: red;
     background-color: transparent;
     text-decoration: underline;
-  }
-  
-  a:active {
+}
+
+a:active {
     color: yellow;
     background-color: transparent;
     text-decoration: underline;
-  }
+}
